# zinoengine-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build_macos.yml  build_windows.yml  rust.yml
assets/shaders/: core.hlsl  imgui.zeshader  test.zeshader  test2.t_zeshader  zeui_base.zeshader
assets/textures/editor/icons/: icons8-file-64.zeassetmeta  icons8-folder-64.zeassetmeta
src/editor/ze-asset-editor/: Cargo.toml
src/editor/ze-asset-editor/src/: lib.rs
src/editor/ze-editor/: Cargo.toml  build.rs
src/editor/ze-editor/src/: asset_explorer.rs  console.rs  editor.rs  icon_manager.rs  main.rs
src/editor/ze-property-editor/: Cargo.toml
src/editor/ze-property-editor/src/: lib.rs
src/editor/ze-texture-editor/: Cargo.toml
src/editor/ze-texture-editor/src/: lib.rs
src/editor/ze_editor/: Cargo.toml  build.rs
src/editor/ze_editor/src/: asset_explorer.rs  editor.rs  main.rs
src/engine/macos/ze-macos-platform/: Cargo.toml
src/engine/macos/ze-macos-platform/src/: lib.rs
src/engine/macos/ze-metal-backend/: Cargo.toml
src/engine/macos/ze-metal-shader-compiler/: Cargo.toml
src/engine/macos/ze-metal-shader-compiler/src/: lib.rs
src/engine/windows/ze-d3d12-backend/: Cargo.toml  build.rs  pix-wrapper.cpp  pix-wrapper.hpp
src/engine/windows/ze-d3d12-backend/src/: backend.rs  command_manager.rs  descriptor_manager.rs  device.rs  frame_manager.rs  lib.rs  pipeline_manager.rs  resource_manager.rs  utils.rs
src/engine/windows/ze-d3d12-backend/src/device/: buffer.rs  cmd_list.rs  memory_pool.rs  mod.rs  sampler.rs  shader.rs  swapchain.rs  texture.rs  views.rs
src/engine/windows/ze-d3d12-shader-compiler/: Cargo.toml
src/engine/windows/ze-d3d12-shader-compiler/src/: lib.rs
src/engine/windows/ze-windows-platform/: Cargo.toml
src/engine/ze-asset-server/: Cargo.toml
src/engine/ze-asset-server/src/: lib.rs
src/engine/ze-asset-system/: Cargo.toml
src/engine/ze-asset-system/src/: importer.rs  lib.rs  loader.rs
src/engine/ze-core/: Cargo.toml
src/engine/ze-core-derive/: Cargo.toml
src/engine/ze-core-derive/src/: lib.rs
src/engine/ze-core/src/: color.rs  lib.rs  logger.rs  maths.rs  pool.rs  signals.rs  sparse_vec.rs  sync.rs  thread.rs  type_uuid.rs
src/engine/ze-core/src/maths/: mod.rs  point.rs
src/engine/ze-core/src/maths/matrix/: alignment.rs  matrix4x4.rs  mod.rs  storage.rs
src/engine/ze-core/src/maths/vector/: component.rs  mod.rs
src/engine/ze-d3d12-backend/: .gitignore  Cargo.toml
src/engine/ze-d3d12-backend/src/: backend.rs  command_manager.rs  descriptor_manager.rs  device.rs  frame_manager.rs  pipeline_manager.rs  resource_manager.rs
src/engine/ze-d3d12-shader-compiler/: Cargo.toml
src/engine/ze-ecs/: Cargo.toml
src/engine/ze-ecs-macros/: Cargo.toml
src/engine/ze-ecs-macros/src/: lib.rs
src/engine/ze-ecs/src/: access.rs  archetype.rs  component.rs  entity.rs  erased_vec.rs  lib.rs  sparse_set.rs
src/engine/ze-ecs/src/system/: condition.rs  executor.rs  func_system.rs  mod.rs  param.rs  query.rs  registry.rs  schedule.rs  set.rs
src/engine/ze-ecs/src/world/: mod.rs
src/engine/ze-ecs/src/world/query/: filter.rs  mod.rs  state.rs
src/engine/ze-filesystem/: Cargo.toml
src/engine/ze-filesystem/src/: lib.rs  mount_points.rs  path.rs
src/engine/ze-font-asset/: Cargo.toml
src/engine/ze-font-asset/src/: lib.rs
src/engine/ze-gfx/: Cargo.toml
src/engine/ze-gfx/src/: backend.rs  lib.rs  null.rs  utils.rs
src/engine/ze-imgui/: Cargo.toml
src/engine/ze-imgui-sys/: .gitignore  Cargo.toml  build.rs
src/engine/ze-imgui-sys/src/: bindings.rs  lib.rs
src/engine/ze-imgui/src/: lib.rs  renderer.rs  str_buffer.rs
src/engine/ze-jobsystem/: Cargo.toml
src/engine/ze-jobsystem/src/: allocator.rs  job.rs  job_allocator.rs  lib.rs  prelude.rs  tests.rs  worker_thread.rs
src/engine/ze-jobsystem/src/iter/: enumerate.rs  for_each.rs  mod.rs  prelude.rs  producer.rs  slice.rs  vec.rs  zip.rs
src/engine/ze-platform/: Cargo.toml
src/engine/ze-platform/src/: lib.rs
src/engine/ze-reflection/: Cargo.toml
src/engine/ze-reflection-derive/: Cargo.toml
src/engine/ze-reflection-derive/src/: lib.rs
src/engine/ze-reflection/src/: lib.rs
src/engine/ze-render-graph/: Cargo.toml
src/engine/ze-render-graph/src/: lib.rs  registry.rs  render_pass.rs
src/engine/ze-shader-compiler/: Cargo.toml
src/engine/ze-shader-system/: Cargo.toml
src/engine/ze-shader-system/src/: lib.rs  zeshader.rs
src/engine/ze-texture-asset/: Cargo.toml
src/engine/ze-texture-asset/src/: importer.rs  lib.rs  loader.rs
src/engine/ze-ui/: Cargo.toml
src/engine/ze-ui/src/: font.rs  glyph_cache.rs  lib.rs  property.rs  renderer.rs  widgets.rs
src/engine/ze-windows-platform/: Cargo.toml
src/engine/ze-windows-platform/src/: cursor.rs  lib.rs  window.rs
src/engine/ze_asset_system/: Cargo.toml
src/engine/ze_asset_system/src/: lib.rs
src/engine/ze_core/: Cargo.toml
src/engine/ze_core/src/: color.rs  lib.rs  logger.rs  maths.rs  signals.rs  sparse_array.rs  (+2 more)
src/engine/ze_d3d12_backend/: Cargo.toml  build.rs  pix-wrapper.cpp
src/engine/ze_d3d12_backend/src/: backend.rs  command_manager.rs  descriptor_manager.rs  device.rs  lib.rs  pipeline_manager.rs  pix.rs  utils.rs
src/engine/ze_d3d12_shader_compiler/: Cargo.toml
src/engine/ze_d3d12_shader_compiler/src/: lib.rs
src/engine/ze_filesystem/: Cargo.toml
src/engine/ze_gfx/: Cargo.toml
src/engine/ze_imgui/: Cargo.toml
src/engine/ze_imgui/src/: lib.rs  renderer.rs  str_buffer.rs  window.rs
src/engine/ze_imgui_sys/: Cargo.toml  build.rs  cimgui-bindgen.h
src/engine/ze_jobsystem/: Cargo.toml
src/engine/ze_jobsystem/src/: allocator.rs  lib.rs  tests.rs
src/engine/ze_main/: Cargo.toml  agility.def
src/engine/ze_main/src/: main.rs
src/engine/ze_platform/: Cargo.toml
src/engine/ze_render_graph/: Cargo.toml
src/engine/ze_shader_compiler/: Cargo.toml
src/engine/ze_shader_system/: Cargo.toml
src/engine/ze_shader_system/src/: lib.rs  zeshader.rs
src/engine/ze_texture_asset/: Cargo.toml
src/engine/ze_windows_platform/: Cargo.toml
(+22 files in other folders)
