[package]
name = "ze-asset-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze-core = { version = "0.1.0", path = "../../engine/ze-core" }
ze-imgui = { version = "0.1.0", path = "../../engine/ze-imgui" }
parking_lot = "0.12.1"
uuid = "1.1.2"