[package]
name = "ze-asset-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core = { version = "0.1.0", path = "../../engine/ze-core" }
ze-imgui = { version = "0.1.0", path = "../../engine/ze-imgui" }
ze-asset-system = { version = "0.1.0", path = "../../engine/ze-asset-system" }
ze-asset-server = { version = "0.1.0", path = "../../engine/ze-asset-server" }
ze-filesystem = { version = "0.1.0", path = "../../engine/ze-filesystem" }
parking_lot = "0.12.1"
uuid = "1.1.2"
enumflags2 = "0.7.5"
