[package]
name = "ze-texture-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core = { version = "0.1.0", path = "../../engine/ze-core" }
ze-imgui = { version = "0.1.0", path = "../../engine/ze-imgui" }
ze-asset-system = { version = "0.1.0", path = "../../engine/ze-asset-system" }
ze-texture-asset = { version = "0.1.0", path = "../../engine/ze-texture-asset" }
ze-reflection = { version = "0.1.0", path = "../../engine/ze-reflection" }
ze-asset-editor = { version = "0.1.0", path = "../ze-asset-editor" }
ze-property-editor = { version = "0.1.0", path = "../ze-property-editor" }
uuid = "1.1.2"
url = "2.2.2"
enumflags2 = "0.7.5"