[package]
name = "ze_editor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ze_editor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze_core = { version = "0.1.0", path = "../../engine/ze_core" }
ze_platform = { version = "0.1.0", path = "../../engine/ze_platform" }
ze_windows_platform = { version = "0.1.0", path = "../../engine/ze_windows_platform" }
ze_gfx = { version = "0.1.0", path = "../../engine/ze_gfx" }
ze_d3d12_backend = { version = "0.1.0", path = "../../engine/ze_d3d12_backend" }
ze_jobsystem = { version = "0.1.0", path = "../../engine/ze_jobsystem" }
ze_shader_system = { version = "0.1.0", path = "../../engine/ze_shader_system" }
ze_filesystem = { version = "0.1.0", path = "../../engine/ze_filesystem" }
ze_d3d12_shader_compiler = { version = "0.1.0", path = "../../engine/ze_d3d12_shader_compiler" }
ze_shader_compiler = { version = "0.1.0", path = "../../engine/ze_shader_compiler" }
ze_imgui = { version = "0.1.0", path = "../../engine/ze_imgui" }
ze_render_graph = { version = "0.1.0", path = "../../engine/ze_render_graph" }
url = "2.2.2"
enumflags2 = "0.7.5"
parking_lot = "0.12.1"
image = "0.24.2"