[package]
name = "ze-asset-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-asset-system = { version = "0.1.0", path = "../ze-asset-system" }
ze-filesystem = { version = "0.1.0", path = "../ze-filesystem" }
parking_lot = "0.12.1"
url = "2.2.2"
sled = "0.34.7"
serde = "1.0.140"
serde_derive = "1.0.140"
bincode = { version = "2.0.0-rc.1", features = [ "serde" ] }
sha2 = "0.10.2"
uuid = {version = "1.1.2", features = [ "serde" ] }