[package]
name = "ze-asset-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-filesystem = { version = "0.1.0", path = "../ze-filesystem" }
url = "2.2.2"
parking_lot = "0.12.1"
uuid = "1.1.2"