[package]
name = "ze-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core-derive = {version = "0.1.0", path = "../ze-core-derive" }
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
chrono = "0.4.19"
termcolor = "1.1.3"
array-init = "2.0.0"
bitvec = "1.0.1"
uuid = "1.1.2"
num-traits = "0.2.15"
mimalloc = {version = "0.1.30", default-features = false }