[package]
name = "ze-filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
parking_lot = "0.12.0"
notify = "4.0.17"
url = "2.2.2"
enumflags2 = "0.7.5"