[package]
name = "ze-gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
enumflags2 = "0.7.5"
parking_lot = "0.12.1"
raw-window-handle = "0.4.3"
serde = "1.0.140"
serde_derive = "1.0.140"