[package]
name = "ze-gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-reflection = { version = "0.1.0", path = "../ze-reflection" }
enumflags2 = "0.7.5"
parking_lot = "0.12.1"
raw-window-handle = "0.5.0"
serde = "1.0.140"
serde_derive = "1.0.140"
num-traits = "0.2.15"
num-derive = "0.3.3"