[package]
name = "ze-imgui"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-platform = { version = "0.1.0", path = "../ze-platform" }
ze-gfx = { version = "0.1.0", path = "../ze-gfx" }
ze-imgui-sys = { version = "0.1.0", path = "../ze-imgui-sys" }
ze-shader-system = { version = "0.1.0", path = "../ze-shader-system" }
enumflags2 = "0.7.5"