[package]
name = "ze-reflection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-reflection-derive = { version = "0.1.0", path = "../ze-reflection-derive" }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
num-traits = "0.2.15"
num-derive = "0.3.3"