[package]
name = "ze-texture-asset"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-gfx = { version = "0.1.0", path = "../ze-gfx" }
ze-asset-system = { version = "0.1.0", path = "../ze-asset-system" }
ze-reflection = { version = "0.1.0", path = "../ze-reflection" }
url = "2.2.2"
uuid = { version = "1.1.2", features = [ "v4" ] }
serde = "1.0.140"
serde_derive = "1.0.140"
bincode = { version = "2.0.0-rc.1", features = [ "serde" ] }
image = "0.24.3"
num-traits = "0.2.15"
num-derive = "0.3.3"