[package]
name = "ze-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-gfx = { version = "0.1.0", path = "../ze-gfx" }
ze-asset-system = { version = "0.1.0", path = "../ze-asset-system" }
ze-shader-system = { version = "0.1.0", path = "../ze-shader-system" }
ze-freetype = { version = "0.1.0", path = "../../third-party/ze-freetype" }
ze-font-asset = { version = "0.1.0", path = "../ze-font-asset" }
rand = "0.8.5"
downcast-rs = "1.2.0"
rectangle-pack = "0.4.2"
harfbuzz_rs = "2.0.1"