[package]
name = "ze-windows-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze-core = { version = "0.1.0", path = "../ze-core" }
ze-platform = { version = "0.1.0", path = "../ze-platform" }
windows = { version = "0.37.0", features = [ 
    "Win32", 
    "Win32_Foundation", 
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Media_Multimedia",
    "Win32_UI_HiDpi"] }
enumflags2 = "0.7.5"
parking_lot = "0.12.1"
raw-window-handle = "0.4.3"