[package]
name = "ze_asset_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze_core = { version = "0.1.0", path = "../ze_core" }
ze_filesystem = { version = "0.1.0", path = "../ze_filesystem" }
url = "2.2.2"