[package]
name = "ze_d3d12_shader_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze_gfx = {path = "../ze_gfx", version = "0.1.0" }
ze_filesystem = {path = "../ze_filesystem", version = "0.1.0" }
ze_shader_compiler = {path = "../ze_shader_compiler", version = "0.1.0" }
hassle-rs = "0.9.0"