[package]
name = "ze_jobsystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ze_core = {path = "../ze_core", version = "0.1.0" }
crossbeam = "0.8.1"
thread_local = "1.1.4"
num_cpus = "1.13.1"
parking_lot = "0.12.0"