[package]
name = "ze_main"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ze_main"

[dependencies]
lazy_static = "1.4.0"
image = "0.24.2"
ze_core = { version = "0.1.0", path = "../ze_core" }
ze_platform = { version = "0.1.0", path = "../ze_platform" }
ze_windows_platform = { version = "0.1.0", path = "../ze_windows_platform" }
ze_gfx = { version = "0.1.0", path = "../ze_gfx" }
ze_d3d12_backend = { version = "0.1.0", path = "../ze_d3d12_backend" }
ze_jobsystem = { version = "0.1.0", path = "../ze_jobsystem" }
ze_shader_system = { version = "0.1.0", path = "../ze_shader_system" }
ze_filesystem = { version = "0.1.0", path = "../ze_filesystem" }
ze_d3d12_shader_compiler = { version = "0.1.0", path = "../ze_d3d12_shader_compiler" }
ze_imgui = { version = "0.1.0", path = "../ze_imgui" }