[package]
name = "ze-macos-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-core = { version = "0.1.0", path = "../../ze-core" }
ze-platform = { version = "0.1.0", path = "../../ze-platform" }
parking_lot = "0.12.1"
raw-window-handle = "0.5.0"
cocoa = "0.24.0"
core-graphics = "0.22.3"