[package]
name = "ze-d3d12-shader-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
ze-gfx = {path = "../../ze-gfx", version = "0.1.0" }
ze-filesystem = {path = "../../ze-filesystem", version = "0.1.0" }
ze-shader-compiler = {path = "../../ze-shader-compiler", version = "0.1.0" }
hassle-rs = "0.9.0"
url = "2.2.2"